--- a/assets/style.css
+++ b/assets/style.css
@@ -32,7 +32,7 @@ body::after {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, rgba(0,0,0,0.3) 50%, rgba(0,0,0,0.3) 50%);
+    background: linear-gradient(180deg, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.5) 50%);
     z-index: 2;
 }
 div.titulo{
@@ -129,9 +129,10 @@ h1{
 .container {
     padding: 50px;
     width: 50%;
-    height: 100%;
+    height: auto;
     max-width: 400px;
     max-height: 500px;
+    min-height: 350px;
     display: none;
     justify-content: center;
     align-items: center;
@@ -140,6 +141,7 @@ h1{
     border-radius: 20px;
     color:#6B7888;
     z-index: 20;
+    position: relative;
 }
 form p{
     font-size: 12px;
@@ -187,8 +189,56 @@ form {
     min-width: 100%;
     box-sizing: border-box;
     padding: 20px;
+    
 }
+.slider1 input, .slider1 h4{
+    width: 100%;
+    margin: auto;
+}
+.slider1 span{
+    color:rgba(0,0,0,0.4); 
+    font-size: 13px;
+    text-align: center;
+    padding: 15px 0;
+}
+.slider1 h4{
+    text-align: center;
+    padding-bottom: 10px;
+}
+.range-container {
+    width: 300px;
+    margin: 20px auto;
+  }
+  
+  .range-slider {
+    width: 100%;
+  }
+  
+  .range-values {
+    display: flex;
+    justify-content: space-between;
+    opacity: 1; 
+  }
 
+  #value1, #value2{
+    width: 80px;
+    padding: 10px;
+    border:1px solid rgba(0,0,0,0.2);
+    border-radius: 10px;
+    color:rgba(0,0,0,0.4);   
+}
+#value1:before, #value2:before{
+    content:'$'
+}
+.slider1-p{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    width: 90%;
+    margin: auto;
+    padding-top: 20px;
+}
 /* .slide:not(.active) {
     display: none;
 } */
@@ -214,15 +264,39 @@ button {
 }
 
 button:hover {
-    background: #6782FF;
+    background: #5472FF;
 }
 
-.prev-btn {
-    background: #6c757d;
+/*selects*/
+div.slide select, div.slide input[type=text]{
+    width: 100%;
+    border:1px solid rgba(0,0,0,0.2);
+    border-radius: 10px;
+    padding: 10px;
 }
-
-.prev-btn:hover {
-    background: #5a6268;
+div.slide label{
+    font-size: 13px;
+    text-align: start;
+}
+div.slide{
+    text-align: center;
+}
+div.slide h4{
+    text-align: center;
+}
+.next-btn{
+    min-width: 200px;
+}
+.prev-btn{
+    min-width: 100px;
+    color:#6782FF;
+    border:1px solid #6782FF;
+    background-color: transparent;
+}
+.prev-btn:hover{
+    background-color:#5472FF;
+    border-color:#5472FF;
+    color:#fff;
 }
 
 .resultados {
@@ -338,7 +412,7 @@ button:hover {
     height: 30px;
     border-radius: 50%;
     background-color: #f1f1f1;
-    color: #6782FF;
+    color: #fff;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -368,3 +442,6 @@ button:hover {
 .slide.active {
     display: block;
 }
+
+
+
