--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,8 @@ body {
     justify-content: space-around;
     height: 100vh;
     position: relative;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 body::before {
@@ -82,6 +83,7 @@ h1{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
     border-radius: 20px;
     min-width: 1500px;
     gap: 100px;
@@ -445,3 +447,91 @@ div.slide h4{
 
 
 
+.call-to-action1 {
+    display: flex;
+    justify-content: space-around;
+    z-index: 99;
+    color:#fff;
+    background-color: #91C159;
+    width: 100%;
+    padding: 20px 0 20px 0;
+    position: absolute;
+    bottom: 0;
+  }
+  a{
+    text-decoration: none;
+    color:inherit
+  }
+
+  /*responsive*/
+  @media only screen and (min-width:780px) and (max-width:1430px){
+    div.titulo{
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    div.titulo h1{
+        font-size: 60px;
+        text-align: center;
+    }
+    .container-form{
+        min-width: 100%;
+        gap:0px;
+        align-items: stretch;
+    }
+    .intro{
+        margin-bottom:30px;
+        padding: 20px 50px;
+        
+    }
+        .call-to-action1{
+        position: relative;
+    }
+}
+
+@media only screen and (max-width:780px){
+    div.titulo{
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+        margin-top: 30px;
+        
+    }
+    div.titulo h1{
+        font-size: 32px;
+        text-align: center;
+    }
+    div.titulo h3{
+        font-size: 15px;
+        text-align: center;
+    }
+    .container-form{
+        min-width: 100%;
+        gap:0px;
+        align-items: stretch;
+    }
+    .intro{
+        margin-bottom:30px;
+        padding: 20px 5px; 
+        width: 90%;
+        
+    }
+    .intro p{
+        font-size: 13px;
+    }
+    .intro h3{
+        text-align: center;
+        font-size: 20px;
+    }
+    .intro h4{
+        font-size: 13px;
+    }
+    .call-to-action1{
+        position: relative;
+    }
+}
