--- a/assets/style-result.css
+++ b/assets/style-result.css
@@ -1,39 +1,38 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    height: 100%;
-    position: relative;
-    overflow-x: hidden;
-    overflow-y: scroll;
-
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  height: 100vh;
+  position: relative;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 body::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('/assets/img/pexels-ollivves-1103829.jpg') no-repeat center center/cover;
-    filter: blur(5px); /* Ajusta el nivel de blur según sea necesario */
-    z-index: 1;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('/assets/img/pexels-ollivves-1103829.jpg') no-repeat center center/cover;
+  filter: blur(5px); /* Ajusta el nivel de blur según sea necesario */
+  z-index: 1;
 }
 
 body::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(180deg, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.5) 50%);
-    z-index: 2;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(180deg, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.5) 50%);
+  z-index: 2;
 }
   
   .container {
@@ -146,15 +145,25 @@ body:before{
 }
 .paletas{
     flex-wrap: wrap;
-}
-body{
-    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 body:after{
    height: auto; 
 }
 .paleta{
-    width: 100%;
-    max-width: 300px;
+    width: 85%;
+    height: auto;
+    min-height: 300px;
+}
+.call-to-action2, .call-to-action1{
+  max-height: 200px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.call-to-action2 button, .call-to-action1 button{
+  max-width: 200px;
 }
 }
