--- a/assets/style.css
+++ b/assets/style.css
@@ -518,7 +518,7 @@ div.slide h4{
     .intro{
         margin-bottom:30px;
         padding: 20px 5px; 
-        width: 90%;
+        width: 85%;
         
     }
     .intro p{
@@ -533,5 +533,23 @@ div.slide h4{
     }
     .call-to-action1{
         position: relative;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
     }
+    .call-to-action1 p{
+        text-align: center;
+    }
+    .container{
+        min-height: 500px;
+        padding: 20px 10px;
+        justify-content: end;
+        margin-bottom: 50px;
+        overflow-x: hidden;
+      }
+      .prev-btn, button[type="submit"]{
+        min-width: 200px;
+      }
 }
