--- a/assets/style.css
+++ b/assets/style.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ubuntu&display=swap');
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 400;
     margin: 0;
     padding: 0;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
     position: relative;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -56,6 +58,7 @@ img.logo{
     position: absolute;
     left: 10px;
     top: 10px;
+    z-index: 99;
 }
 h1{
     font-size: 60px;
@@ -63,6 +66,7 @@ h1{
     font-weight: 500;
     text-align: start;
     font-family: "Montserrat", sans-serif;
+
     margin-bottom: 0;
 }
 .titulo h3{
@@ -85,8 +89,7 @@ h1{
     align-items: center;
     flex-wrap: wrap;
     border-radius: 20px;
-    min-width: 1500px;
-    gap: 100px;
+    gap: 50px;
     position: relative;
     z-index: 3;
 }
@@ -175,11 +178,7 @@ form p{
     .logo{
         max-width: 250px;
     }
-    .container{
-        width: 85%;
-        overflow-y: scroll;
-        
-    }
+
 }
 
 form {
@@ -462,37 +461,7 @@ div.slide h4{
     text-decoration: none;
     color:inherit
   }
-
-  /*responsive*/
-  @media only screen and (min-width:780px) and (max-width:1430px){
-    div.titulo{
-        width: 100%;
-        max-width: 100%;
-        height: auto;
-        justify-content: center;
-        align-items: center;
-        
-    }
-    div.titulo h1{
-        font-size: 60px;
-        text-align: center;
-    }
-    .container-form{
-        min-width: 100%;
-        gap:0px;
-        align-items: stretch;
-    }
-    .intro{
-        margin-bottom:30px;
-        padding: 20px 50px;
-        
-    }
-        .call-to-action1{
-        position: relative;
-    }
-}
-
-@media only screen and (max-width:780px){
+  @media only screen and (max-width:780px){
     div.titulo{
         width: 100%;
         max-width: 100%;
@@ -513,12 +482,14 @@ div.slide h4{
     .container-form{
         min-width: 100%;
         gap:0px;
+        height: auto;
         align-items: stretch;
     }
     .intro{
         margin-bottom:30px;
-        padding: 20px 5px; 
+        padding: 30px 25px; 
         width: 85%;
+        max-width: none;
         
     }
     .intro p{
@@ -544,12 +515,49 @@ div.slide h4{
     }
     .container{
         min-height: 500px;
-        padding: 20px 10px;
+        padding: 20px 10px 0 10px!important;
         justify-content: end;
-        margin-bottom: 50px;
         overflow-x: hidden;
+        width: 90%;
+        overflow-y: scroll;
       }
       .prev-btn, button[type="submit"]{
         min-width: 200px;
       }
+
 }
+  /*responsive*/
+  @media only screen and (min-width:780px) and (max-width:1030px){
+    div.titulo{
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+        
+    }
+    div.titulo h1{
+        font-size: 60px;
+        text-align: center;
+    }
+    .container-form{
+        min-width: 100%;
+        gap:0px;
+        align-items: stretch;
+    }
+    .intro{
+        margin-bottom:30px;
+        padding: 20px 50px;
+        
+    }
+        .call-to-action1{
+        position: relative;
+    }
+    .container{
+        padding: 50px 50px 0 50px;
+        margin-bottom: 50px;
+    }
+    
+
+}
+
