--- a/assets/style.css
+++ b/assets/style.css
@@ -516,7 +516,7 @@ div.slide h4{
     .container{
         min-height: 500px;
         padding: 20px 10px 0 10px!important;
-        justify-content: end;
+        justify-content: center;
         overflow-x: hidden;
         width: 90%;
         overflow-y: scroll;
@@ -524,6 +524,10 @@ div.slide h4{
       }
       .prev-btn, button[type="submit"]{
         min-width: 200px;
+      }
+      .progress-container{
+        margin-bottom: 0;
+        margin-top: 20px;
       }
 
 }
