--- a/assets/style-result.css
+++ b/assets/style-result.css
@@ -22,8 +22,8 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('/assets/img/pexels-ollivves-1103829.jpg') no-repeat center center/cover;
-  filter: blur(5px); /* Ajusta el nivel de blur según sea necesario */
+  background: url('/assets/img/canchafondo.jpg') no-repeat center center/cover;
+  filter: blur(1px); /* Ajusta el nivel de blur según sea necesario */
   z-index: 1;
 }
 
@@ -34,7 +34,7 @@ body::after {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(180deg, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.5) 50%);
+  background: linear-gradient(180deg, rgba(0,0,0,0.7) 50%, rgba(0,0,0,0.7) 50%);
   z-index: 2;
 }
   
@@ -142,8 +142,8 @@ input[type=text]{
   border-radius: 10px;
   padding: 10px;
 }
-div.consulta{
-  background: #f1f1f1;
+div.consulta, div.consulta-otra{
+  background: #fffbfb;
   position: fixed;
   top: 0;
   left: 0;
@@ -153,27 +153,30 @@ div.consulta{
   z-index: 99;
   width:95%;
   height: auto;
-  max-width: 280px;
-  max-height: 350px;
+  max-width: 350px;
+  max-height: 400px;
   border-radius: 10px;
-  box-shadow: 3px 3px rgba(0,0,0,0.5);
+  box-shadow: 3px 3px #6782FF;
   padding: 30px 20px;
   display: none;
   
 }
-div.consulta h3{
+div.consulta h3, div.consulta-otra{
   text-align: center;
 }
-div.consulta .btn-consulta{
+div.consulta .btn-consulta, div.consulta-otra .btn-consulta{
   width: 100%;
   margin-top: 20px;
   
   
 }
-div.consulta span{
+div.consulta span, div.consulta-otra span{
   font-size: 13px;
   
   display: block;
+}
+div.consulta-otra input, div.consulta-otra label{
+  margin-bottom: 5px;
 }
 .button-transparent{
   background: transparent;
@@ -193,6 +196,9 @@ div.consulta span{
         font-size:43px;
         text-align: center;
         padding: 0 10px;
+    }
+    div.consulta, div.consulta-otra{
+      max-width: 280px;
     }
     .paletas{
       align-items: center;
