--- a/assets/style.css
+++ b/assets/style.css
@@ -25,8 +25,8 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('/assets/img/pexels-ollivves-1103829.jpg') no-repeat center center/cover;
-    filter: blur(5px); /* Ajusta el nivel de blur según sea necesario */
+    background: url('/assets/img/canchafondo.jpg') no-repeat center center/cover;
+    filter: blur(1px); /* Ajusta el nivel de blur según sea necesario */
     z-index: 1;
 }
 
@@ -37,7 +37,7 @@ body::after {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, rgba(0,0,0,0.5) 50%, rgba(0,0,0,0.5) 50%);
+    background: linear-gradient(180deg, rgba(0,0,0,0.7) 50%, rgba(0,0,0,0.7) 50%);
     z-index: 2;
 }
 div.titulo{
@@ -86,6 +86,7 @@ h1{
 .container-form{
     width: 100%;
     height: 100%;
+    min-height: 80vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -266,8 +267,8 @@ button:hover {
 }
 
 /*selects*/
-div.slide input[type=text]{
-    width: 100%;
+div.slide input[type=text], .form-canchas input{
+    width: 90%;
     border:1px solid rgba(0,0,0,0.2);
     border-radius: 10px;
     padding: 10px;
@@ -298,8 +299,9 @@ div.slide select:focus {
 }
 
 div.slide label{
-    font-size: 13px;
+    font-size: 15px;
     text-align: start;
+    font-weight: 500;
 }
 div.slide{
     text-align: center;
@@ -466,7 +468,29 @@ div.slide h4{
     display: block;
 }
 
-
+.button-transparent{
+    background: transparent;
+    color: #5472FF;
+    padding: 15px 30px;
+    border: 1px solid #5472FF;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  .button-transparent:hover{
+    background: #5472FF;
+    color:#fff;
+  }
+  
+  .call-to-action2 {
+    display: flex;
+    justify-content: space-around;
+    z-index: 99;
+    color:#fff;
+  }
+  .call-to-action2{
+    width: 100%;
+    padding: 20px 0 20px 0;
+  }
 
 .call-to-action1 {
     display: flex;
@@ -476,8 +500,9 @@ div.slide h4{
     background-color: #91C159;
     width: 100%;
     padding: 20px 30px;
-    position: absolute;
-    bottom: 0;
+  }
+  .call-to-action1 p{
+    max-width: 600px;
   }
   a{
     text-decoration: none;
@@ -493,6 +518,26 @@ div.slide h4{
 
 
   div.consulta{
+    background: #fffbfb;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    z-index: 99;
+    width:90%;
+    height: auto;
+    max-width: 480px;
+    max-height: 590px;
+    border-radius: 10px;
+    box-shadow: 3px 3px #6782FF;
+    padding: 30px 20px;
+    display: none;
+    
+  }
+
+  div.consulta-medica{
     background: #f1f1f1;
     position: fixed;
     top: 0;
@@ -501,24 +546,34 @@ div.slide h4{
     bottom: 0;
     margin: auto;
     z-index: 99;
-    width:95%;
+    width:90%;
     height: auto;
-    max-width: 280px;
-    max-height: 450px;
+    max-width: 400px;
+    max-height: 400px;
     border-radius: 10px;
     box-shadow: 3px 3px rgba(0,0,0,0.5);
-    padding: 30px 20px;
+    padding: 30px 20px 0;
     display: none;
-    
-  }
-  div.consulta h3{
     text-align: center;
   }
-  div.consulta .btn-consulta{
-    width: 100%;
-    margin-top: 20px; 
+  div.consulta-medica ul{
+    display: block;
+    text-align: start;
   }
-  div.consulta p{
+
+  .form-canchas{
+    display: flex;
+    flex-direction: column;
+  }
+  div.consulta h3, div.consulta-medica h3{
+    text-align: center;
+  }
+  div.consulta .btn-consulta, .consulta-medica .btn-consulta-medica{
+    width: 100%;
+    margin: 20px auto 0;
+    max-width: 270px; 
+  }
+  div.consulta p, .consulta-medica p{
     font-size: 13px;
     
     display: block;
@@ -557,6 +612,7 @@ div.slide h4{
         gap:0px;
         height: auto;
         align-items: stretch;
+        margin-top:120px;
     }
     .intro{
         margin-bottom:30px;
@@ -575,7 +631,7 @@ div.slide h4{
     .intro h4{
         font-size: 13px;
     }
-    .call-to-action1{
+    .call-to-action1, .call-to-action2{
         position: relative;
         display: flex;
         justify-content: center;
@@ -583,7 +639,7 @@ div.slide h4{
         align-items: center;
         padding: 20px;
     }
-    .call-to-action1 p{
+    .call-to-action1 p, .call-to-action2 p{
         text-align: center;
     }
     .container{
@@ -604,6 +660,13 @@ div.slide h4{
       }
       .slider1-p, .oferta{
         text-align: center;
+      }
+      div.consulta{
+        max-width: 95%;
+      }
+      .form-canchas{
+        width: 90%;
+        margin: auto;
       }
 
 }
