--- a/assets/style.css
+++ b/assets/style.css
@@ -71,6 +71,9 @@ h1{
 
     margin-bottom: 0;
 }
+.texto-form{
+    display: none;
+}
 .titulo h3{
     text-align: start;
     margin-top: 100px;
@@ -642,7 +645,7 @@ div.slide h4{
         
     }
     .margin-top{
-        margin-top:120px;
+        margin-top:40px;
     }
     .intro{
         margin-bottom:30px;
