--- a/assets/style.css
+++ b/assets/style.css
@@ -25,7 +25,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('/assets/img/canchafondo.jpg') no-repeat center center/cover;
+    background: url('/assets/img/fondo.jpeg') no-repeat center center/cover;
     filter: blur(1px); /* Ajusta el nivel de blur según sea necesario */
     z-index: 1;
 }
