agregado de boton y nuevas paletas

--- a/assets/style-result.css
+++ b/assets/style-result.css
@@ -6,13 +6,15 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   flex-wrap: wrap;
   justify-content: space-around;
   height: 100%;
+  min-height: 100vh;
   position: relative;
   overflow-x: hidden;
   overflow-y: scroll;
+
 }
 
 body::before {
@@ -22,6 +24,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   background: url('/assets/img/fondo.jpeg') no-repeat center center/cover;
   filter: blur(1px); /* Ajusta el nivel de blur según sea necesario */
   z-index: 1;
@@ -34,6 +37,7 @@ body::after {
   left: 0;
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   background: linear-gradient(180deg, rgba(0,0,0,0.7) 50%, rgba(0,0,0,0.7) 50%);
   z-index: 2;
 }
@@ -43,6 +47,7 @@ body::after {
     padding: 50px;
     color: #fff;
     z-index: 54;
+    width: 100%;
   }
   .container h1{
     font-size: 63px;
@@ -53,6 +58,7 @@ body::after {
     justify-content: space-around;
     flex-wrap: wrap;
     gap: 20px;
+   
   }
 
   
@@ -66,7 +72,19 @@ body::after {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  }
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 1.5s ease-in-out, transform 1.5s ease-in-out;
+}
+
+.paleta.visible {
+    opacity: 1;
+    transform: translateY(0);
+}
+.botones{
+  display: flex;
+  flex-direction: row;
+}
   .paleta h2,  .paleta p{
     color:#000;
 
@@ -199,6 +217,36 @@ div.consulta-otra input, div.consulta-otra label{
   font-size: 42px;
   margin: 0;
 }
+
+/*botones paletas*/
+.button-container {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px; /* Espaciado opcional */
+}
+
+.button-container .button {
+  display: inline-block;
+  min-width: 200px;
+}
+
+.presentacion {
+  opacity: 0;
+  transition: opacity 1.5s ease-in-out;
+}
+
+.presentacion.visible {
+  opacity: 1;
+}
+.instagram{
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+  padding: 5px;
+}
+.call-to-action2 div{
+  display: flex;
+}
 @media only screen and (max-width:780px){
       .container h1{
         font-size:43px;
@@ -251,6 +299,10 @@ div.consulta-otra input, div.consulta-otra label{
    p.oferta, p.presentacion{
     text-align: center;
     padding: 20px;
+}
+.botones{
+  display: flex;
+  flex-direction: column;
 }
 
 }
