--- a/assets/style-result.css
+++ b/assets/style-result.css
@@ -107,16 +107,16 @@ body::after {
     background: #5472FF;
   }
   .button-light{
-    background: transparent;
-    color: #fff;
+    background: #fff;
+    color: #6782FF;
     padding: 15px 30px;
     border: 1px solid #fff;
     border-radius: 5px;
     cursor: pointer;
   }
   .button-light:hover{
-    background: #fff;
-    color:#5472FF;
+    background: transparent;
+    color:#fff;
   }
 
   
@@ -260,6 +260,48 @@ div.consulta-otra input, div.consulta-otra label{
   z-index: 99;
   color:#fff;
 }
+
+.imagen-sponsor{
+ 
+  padding: 20px;
+  display: flex;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  height: 100%;
+  width: auto;
+  max-width: 400px;
+  max-height: 600px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background: linear-gradient(180deg, rgba(0,0,0,0.2) 50%, rgba(0,0,0,0.2) 50%), url('/assets/img/Sponsor.jpg') no-repeat center top/cover;
+  z-index: 100;
+  
+
+}
+.sponsor{
+  display: none;
+}
+
+.sponsor:before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  background: linear-gradient(180deg, rgba(0,0,0,0.9) 50%, rgba(0,0,0,0.9) 50%);
+  z-index: 100;
+ 
+}
+
+
+
 @media only screen and (max-width:780px){
       .container h1{
         font-size:43px;
