--- a/assets/style.css
+++ b/assets/style.css
@@ -290,7 +290,9 @@ button {
     border-radius: 5px;
     cursor: pointer;
 }
-
+button.whatapp{
+    background: #91c159;
+}
 button:hover {
     background: #5472FF;
 }
